force-app/main/default/objects/FlexiChk__Checklist__c/FlexiChk__Checklist__c.object-meta.xml
<CustomObject>
    <label>Checklist</label>
    <nameField>
        <displayFormat>CHECK-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>