force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Allow_Download_Checklist__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Allow_Download_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Download Checklist</label>
    <type>Checkbox</type>
</CustomField>