force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Approver__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The approver who can approve the checklist</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>