force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template</label>
    <referenceTo>FlexiChk__Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklists</relationshipLabel>
    <relationshipName>Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>