force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Number_of_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Number_of_Items_Completed__c</fullName>
    <label>Number of Items Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>