force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Related_Record__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Related_Record__c</fullName>
    <label>Related Record</label>
    <length>80</length>
    <type>Text</type>
</CustomField>