force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Status__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlexiChk__Checklist_Status</valueSetName>
    </valueSet>
</CustomField>