force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Total_Checklist_Items__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Total_Checklist_Items__c</fullName>
    <formula>FlexiChk__Number_of_Items_Completed__c  +  FlexiChk__Number_of_Items_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Checklist Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>