force-app/main/default/objects/FlexiChk__Checklist__c/fields/FlexiChk__Total_Sections__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Total_Sections__c</fullName>
    <formula>FlexiChk__Number_of_Sections_Completed__c  +  FlexiChk__Number_of_Sections_Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>