force-app/main/default/objects/FlexiChk__Checklist__c/listViews/FlexiChk__All.listView-meta.xml
<ListView>
    <fullName>FlexiChk__All</fullName>
    <columns>NAME</columns>
    <columns>FlexiChk__Title__c</columns>
    <columns>FlexiChk__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>